# System-Design-Lab-4

./: .dockerignore  .gitignore  CMakeLists.txt  CMakePresets.json  Dockerfile  Makefile  README.md  data.js  docker-compose.yaml  openapi.yaml  queries.js  run_as_user.sh  schema_design.md  validation.js
cmake/: DownloadUserver.cmake  get_cpm.cmake
configs/: config_vars.docker.yaml  config_vars.testing.yaml  config_vars.yaml  static_config.yaml
docker/mongo-init/: 01-indexes.js  02-validation.js  03-data.js  seed-data.js
src/: errors.hpp  main.cpp
src/auth/: auth.cpp  auth.hpp
src/handlers/: handlers.cpp  handlers.hpp
src/storage/: storage.cpp  storage.hpp
tests/: conftest.py  test_messenger.py
